tests/paczka2/big_fuzzy/78896897.err
Error in line 6: a60tfm S160 87,3
Error in line 8: t3eTXnLN S160 37,8
Error in line 16: z7PN2c8 S27| 79,6
Error in line 25: a60tfm S160 13,8
Error in line 28: Lzg S160 99,3
Error in line 43: Lzg S108 64,4
Error in line 54: z7PN2c8 S271 119,3
Error in line 64: i1wbvYpEZrQ S271 6n,0
Error in line 51: a60tfm S108 99,9
Error in line 58: 5LPxa7SFlo S160 7,3
Error in line 71: a60tfm S271 84,9
Error in line 76: a60tfm A883 76,4
Error in line 67: S160 A883 75,8
Error in line 81: S160 S271 84,2
Error in line 86: t3eTXnLN S108 19,9
Error in line 92: a60tfm S160 8,7
Error in line 65: Lzg S160 68,1
Error in line 63: i1wbvYpEZrQ S271 89,0
Error in line 109: z7PN2c8 A883 424,5
Error in line 127: S160 A883 62,2
Error in line 134: t3eTXnLN A883 60,1
Error in line 108: a60tfm A883 19,0
Error in line 137: i1wbvYpEZrQ S271 1,3
Error in line 140: z7PN2c8 S271 69,2
Error in line 144: Lz¥ A883 29,5
Error in line 142: z7PN2c8 S160 1,8
Error in line 147: z7PN2c8 A883 70,9
Error in line 145: Lzg S271 26,8
Error in line 158: a60tfméS160é22,7
Error in line 138: a60tfm S160 13,6
Error in line 143: S160 S271 4,6
Error in line 163: S160 S108 215,1
Error in line 193: Lzg A883 12,0
Error in line 199: a60tfm A883 33,7
Error in line 202: a60tfm S271 80,6
Error in line 200: t3eTXnLN S108 23,0
Error in line 213: Lzg S108 64,2
Error in line 207: t3eTXnLN S160 72,4
Error in line 218: t3eTXnLN S271 64,8
Error in line 243: z7PN2c8 S271 86,32
Error in line 232: i1wbvYpEZrQ S271 0,8
Error in line 235: 5LPxa7SFlo S108 39,0
